[metadata]
author = Bahram Aghaei
author_email = aghaee.bahram@gmail.com
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
license = Academic Free License, version 3
license_file = LICENSE
name = hiholiday
description = ''                                                                                         
long_description = file:README.md
long_description_content_type = text/markdown
project_urls =
    Source Code = https://github.com/GreatBahram/hihoiday-cli
    Change Log = https://github.com/GreatBahram/hihoiday-cli/blob/master/CHANGES.md
url = https://github.com/GreatBahram/HiHoliday-cli/
version = 0.1

[options]
include_package_data = True
install_requires =
    requests
    bs4
    lxml
package_dir =
    =src
packages = find:
python_requires = >=3.6

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    holiday = hiholiday.main:main
